Changing name to vaadin-grid-legacy

--- a/vaadin-grid.html
+++ b/vaadin-grid.html
@@ -126,7 +126,7 @@ See the [demo](demo/index.html) for use case examples.
 @element vaadin-grid
 @demo demo/index.html
 -->
-<dom-module id="vaadin-grid">
+<dom-module id="vaadin-grid-legacy">
   <style>
  /* Host styles */
   :host {
@@ -747,7 +747,7 @@ See the [demo](demo/index.html) for use case examples.
 <script>
   Polymer({
 
-    is: 'vaadin-grid',
+    is: 'vaadin-grid-legacy',
 
     _grid: undefined,
 
